--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "mapbox-gl": "^2.5.1",
-    "rxjs": "~6.6.0",
+    "ngx-csv-parser": "0.0.7",
+    "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -29,7 +32,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/mapbox-gl": "^2.4.2",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.34",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
